@@ -9,6 +9,13 @@
   ``IStorage.lastTransaction()``)
   as a destination, not just RelStorages.
 
+- zodbconvert: The ``--incremental`` option is supported with a
+  RelStorage as a destination. See `PR 22`. With contributions by
+  Sylvain Viollon, Mauro Amico, and Peter Jacobs. Originally reported
+  by Jan-Wijbrand Kolman.
+
+.. _`PR 22`: https://github.com/zodb/relstorage/pull/22
+
 1.6.0b3 (2014-12-08)
 --------------------
 
